--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "^7.2.0",
     "@angular/platform-browser-dynamic": "^7.2.0",
     "@angular/router": "^7.2.0",
+    "@datorama/akita": "^1.24.3",
+    "@datorama/akita-ngdevtools": "^5.0.3",
     "core-js": "^2.6.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.3.3",
@@ -37,6 +39,7 @@
     "@types/jasmine": "~3.3.5",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~10.12.18",
+    "akita-schematics": "^1.0.0-rc.3",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
